[package]
name = "lindera-server"
version = "0.1.0"
edition = "2021"
description = "Lindera server."
documentation = "https://docs.rs/lindera-server"
homepage = "https://github.com/lindera-morphology/lindera-server"
repository = "https://github.com/lindera-morphology/lindera-server"
readme = "README.md"
keywords = ["morphological", "analysis", "server"]
categories = ["text-processing"]
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = "0.4"
clap = { version = "3.1", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

lindera = "0.10.0"
lindera-core = "0.10.0"

[[bin]]
name = "lindera-server"
path = "src/main.rs"
