[package]
name = "lindera-server"
version = "0.12.0"
edition = "2021"
description = "Lindera server."
documentation = "https://docs.rs/lindera-server"
homepage = "https://github.com/lindera-morphology/lindera-server"
repository = "https://github.com/lindera-morphology/lindera-server"
readme = "README.md"
keywords = ["morphological", "analysis", "server"]
categories = ["text-processing"]
license = "MIT"

[features]
default = []
full = ["ipadic", "unidic", "ko-dic", "cc-cedict"]
ipadic = ["lindera/ipadic"]  # Japanese dictionary
unidic = ["lindera/unidic"]  # Japanese dictionary
ko-dic = ["lindera/ko-dic"]  # Korean dictionary
cc-cedict = ["lindera/cc-cedict"]  # Chinese dictionary

[dependencies]
anyhow = "1.0"
axum = "0.4"
clap = { version = "3.1", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1.17", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

lindera = "0.12.0"

[[bin]]
name = "lindera-server"
path = "src/main.rs"
